# virtual_gamepad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: VirtualGamepad.h  devGamepad.cpp  devGamepad.h  vgmpad_recv.cpp  vgmpad_send.cpp
